--- a/Views/Product/Parameters/GameParameters.cshtml
+++ b/Views/Product/Parameters/GameParameters.cshtml
@@ -1,8 +1,8 @@
-<div class="product-parameters-group ">
+@* <div class="product-parameters-group ">
     <div class="float-start m-0 p-0">Data premiery:</div>
     <div class="float-end m-0 p-0 fw-bold">@ViewBag.Product.ReleaseDate.ToString("MM/dd/yyyy") r.</div>
 </div>
-<br />
+<br /> *@
 <div class="product-parameters-group ">
     <div class="float-start m-0 p-0">Platforma:</div>
     <div class="float-end m-0 p-0 fw-bold">@ViewBag.Product.Platform</div>
