--- a/Views/Category/Index.cshtml
+++ b/Views/Category/Index.cshtml
@@ -24,7 +24,7 @@
     {
         <div class="col-md-6 col-lg-4 col-xxl-3">
             <div class="product-card">
-                <div class="image" style="background-image: url('@product.ImagePath[0]');">
+                <div class="image" style="background-image: url('@product.ImagesPath[0]');">
                 </div>
                 <div class="description">
                     <div class="product">
