--- a/Views/Product/Parameters/CameraParameters.cshtml
+++ b/Views/Product/Parameters/CameraParameters.cshtml
@@ -1,8 +1,8 @@
-<div class="product-parameters-group ">
+@* <div class="product-parameters-group ">
     <div class="float-start m-0 p-0">Data premiery:</div>
     <div class="float-end m-0 p-0 fw-bold">@ViewBag.Product.ReleaseDate.ToString("MM/dd/yyyy") r.</div>
-</div>
-<br />
+</div> 
+<br /> *@
 <div class="product-parameters-group ">
     <div class="float-start m-0 p-0">Wymiary:</div>
     <div class="float-end m-0 p-0 fw-bold">@ViewBag.Product.Dimensions.X @ViewBag.Product.DimensionUnit x
