--- a/Views/Product/Parameters/CameraParameters.cshtml
+++ b/Views/Product/Parameters/CameraParameters.cshtml
@@ -5,14 +5,7 @@
 <br /> *@
 <div class="product-parameters-group ">
     <div class="float-start m-0 p-0">Wymiary:</div>
-    <div class="float-end m-0 p-0 fw-bold">@ViewBag.Product.Dimensions.X @ViewBag.Product.DimensionUnit x
-        @ViewBag.Product.Dimensions.Y @ViewBag.Product.DimensionUnit x @ViewBag.Product.Dimensions.Z
-        @ViewBag.Product.DimensionUnit</div>
-</div>
-<br />
-<div class="product-parameters-group ">
-    <div class="float-start m-0 p-0">Masa:</div>
-    <div class="float-end m-0 p-0 fw-bold">@ViewBag.Product.Weight @ViewBag.Product.WeightUnit</div>
+    <div class="float-end m-0 p-0 fw-bold">@ViewBag.Product.ScreenDiagonal</div>
 </div>
 <br />
 <div class="product-parameters-group ">
@@ -22,6 +15,6 @@
 <br />
 <div class="product-parameters-group ">
     <div class="float-start m-0 p-0">Megapikseli:</div>
-    <div class="float-end m-0 p-0 fw-bold">@ViewBag.Product.Megapiksels</div>
+    <div class="float-end m-0 p-0 fw-bold">@ViewBag.Product.MatrixType</div>
 </div>
 <br />
