--- a/Views/Product/Parameters/CameraParameters.cshtml
+++ b/Views/Product/Parameters/CameraParameters.cshtml
@@ -1,10 +1,5 @@
-@* <div class="product-parameters-group ">
-    <div class="float-start m-0 p-0">Data premiery:</div>
-    <div class="float-end m-0 p-0 fw-bold">@ViewBag.Product.ReleaseDate.ToString("MM/dd/yyyy") r.</div>
-</div> 
-<br /> *@
 <div class="product-parameters-group ">
-    <div class="float-start m-0 p-0">Wymiary:</div>
+    <div class="float-start m-0 p-0">Przekątna ekranu:</div>
     <div class="float-end m-0 p-0 fw-bold">@ViewBag.Product.ScreenDiagonal</div>
 </div>
 <br />
@@ -14,7 +9,7 @@
 </div>
 <br />
 <div class="product-parameters-group ">
-    <div class="float-start m-0 p-0">Megapikseli:</div>
+    <div class="float-start m-0 p-0">Typ matrycy:</div>
     <div class="float-end m-0 p-0 fw-bold">@ViewBag.Product.MatrixType</div>
 </div>
 <br />
